# email_newsletter

./: Cargo.toml  Dockerfile
configutaion/: base.yml
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  domain.rs  email_client.rs  error.rs  lib.rs  main.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: general_tests.rs  health_check.rs
