[package]
name = "newsletter-deliverer"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter-deliverer"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
config = "0.14.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
hyper = "1.4.1"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.63"
tokio = { version = "1.38.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = [
    "catch-panic",
    "compression-full",
    "sensitive-headers",
    "timeout",
    "trace",
    "cors",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
unicode-segmentation = "1.11.0"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
validator = "0.18.1"

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
claims = "0.7.1"
fake = "2.9.2"
